Read data from files

--- a/MyAgenda/MyAgenda/MyAgenda.csproj
+++ b/MyAgenda/MyAgenda/MyAgenda.csproj
@@ -51,10 +51,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="activities.csv" />
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="data.txt" />
+    <None Include="personData.csv" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
