--- a/MyAgenda/MyAgenda/MyAgenda.csproj
+++ b/MyAgenda/MyAgenda/MyAgenda.csproj
@@ -44,9 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity.cs" />
+    <Compile Include="ActivityRepository.cs" />
     <Compile Include="Agenda.cs" />
     <Compile Include="Calendar.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="PersonRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
