--- a/BigBallGame/BigBallGame/BigBallGame.csproj
+++ b/BigBallGame/BigBallGame/BigBallGame.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
-    <Compile Include="Direction.cs" />
+    <Compile Include="Speed.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
