--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,23 @@ $RECYCLE.BIN/
 .DS_Store
 
 _NCrunch*
+
+# Untracked projects
+POO-LAB1
+POO-LAB2
+POO-LAB3-1
+POO-LAB4
+POO-LAB4-1
+POO-LAB4-2
+POO-LAB6-0104
+POO-LAB-09.04.2020
+POO-LAB-2503
+POO-LAB-040120-ContBancar
+POO2020
+MyAgenda
+DataCalendaristica
+LAB11-BitArray-Indexatori
+File
+Forma2D
+LR
+Elevi
